--- a/zzz.html
+++ b/zzz.html
@@ -1,9 +1,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="thepixelcoders" property="og:author" />
+    <meta content="thepixelcoders" property="article:author" />
     <meta content="Horror Palace" property="og:title" />
-    <meta content="https://files.catbox.moe/owzsiw.webp" property="og:thumbnail" />
+    <meta content="https://files.catbox.moe/owzsiw.webp" property="og:image" />
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
     <title>Horror Palace!</title>
 </head>
