--- a/zzz.html
+++ b/zzz.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="article">
     <meta content="thepixelcoders" property="article:author" />
     <meta content="Horror Palace" property="og:title" />
     <meta content="https://files.catbox.moe/owzsiw.webp" property="og:image" />
