--- a/zzz.html
+++ b/zzz.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="article">
-    <meta content="thepixelcoders" property="article:author" />
+    <meta content="thepixelcoders" property="og:site_name" />
     <meta content="Horror Palace" property="og:title" />
     <meta content="https://files.catbox.moe/owzsiw.webp" property="og:image" />
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
